--- a/package.json
+++ b/package.json
@@ -21,9 +21,15 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "cdk-table-exporter": "^9.0.0",
     "hammerjs": "^2.0.8",
+    "html2canvas": "^1.0.0-rc.5",
+    "jspdf": "^1.5.3",
+    "mat-table-exporter": "^9.0.0",
+    "pdfmake": "^0.1.65",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
+    "xlsx": "^0.15.6",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
