--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
     "@angular/material": "~8.2.3",
+    "@angular/material-moment-adapter": "^9.2.0",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
@@ -26,6 +27,7 @@
     "html2canvas": "^1.0.0-rc.5",
     "jspdf": "^1.5.3",
     "mat-table-exporter": "^9.0.0",
+    "moment": "^2.24.0",
     "pdfmake": "^0.1.65",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
